--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,4 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+CmsL3/App_Data/Logs/UmbracoTraceLog.DESKTOP-O82K4K5.20200921.json
